--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>Template</title>
 </head>
 <body>
-  <h1>My own parcel template</h1>
+  <h1>My own parcel template1</h1>
   <script src="./index.js"></script>
 </body>
 </html>
